--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -4,7 +4,7 @@
 
 TARGET_ARCH = "mipsel"
 
-PREFERRED_VERSION_linux-vuduo2 = "3.1.1"
+PREFERRED_VERSION_linux-vuduo2 = "2.6.37"
 PREFERRED_VERSION_linux-libc-headers = "2.6.31"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
@@ -34,20 +34,21 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
         kernel-module-reiserfs \
         kernel-module-xfs \
 	"
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37 = "kernel vuplus-dvb-modules"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37 = "\
 	kernel-module-ext2 \
 	"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1}', d)}
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1}', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37}', d)}
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37}', d)}
 
-require conf/machine/include/vuplus-modules.inc
+require conf/machine/include/vuplus-modules2.inc
 
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_DVB_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.37', '${KERNEL_3G_MODULES}', '', d)}
+
 
 PREFERRED_VERSION_wpa-supplicant = ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '2.6.18', '0.5.10', '0.7.3', d)}
 
@@ -69,13 +70,12 @@ GLIBC_EXTRA_OECONF = "--disable-profile --with-tls --without-fp --with-__thread"
 
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
-EXTRA_IMAGEDEPENDS += "vuplus-makenfi-native"
 
 MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "enable-rc-kbd"
-MACHINE_FEATURES += "display-text-vfd"
+MACHINE_FEATURES += "display-graphic-vfd"
 
 
 
@@ -96,7 +96,6 @@ IMAGE_CMD_jffs2 = " \
 	--disable-compressor=lzo --compression-mode=size \
        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
        ${EXTRA_IMAGECMD}; \
-       vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
 	mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/duo2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/duo2/root_cfe_auto.jffs2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/duo2/kernel_cfe_auto.bin; \
@@ -130,7 +129,6 @@ IMAGE_CMD_ubi_prepend = " \
 #	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/splash_cfe_auto.bin; \
 
 IMAGE_CMD_ubi_append = "; \
-	vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/duo2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/duo2/root_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/duo2/kernel_cfe_auto.bin; \
