--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -4,53 +4,26 @@
 
 TARGET_ARCH = "mipsel"
 
-PREFERRED_VERSION_linux-vusolo2 = "2.6.37"
+PREFERRED_VERSION_linux-vusolo2 = "3.3.6"
 PREFERRED_VERSION_linux-libc-headers = "2.6.31"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-vusolo2"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18 = "kernel vuplus-dvb-modules \
-        kernel-module-isofs \
-        kernel-module-sr-mod    kernel-module-usb-storage \
-        kernel-module-cdrom \
-        kernel-module-msdos kernel-module-vfat kernel-module-fat \
-        kernel-module-libata kernel-module-ntfs kernel-module-sata-svw \
-        kernel-module-nls-iso8859-15 kernel-module-nls-cp850 \
-        kernel-module-nls-utf8 \
-        kernel-module-i2c-core kernel-module-i2c-dev kernel-module-firmware-class kernel-module-input kernel-module-evdev \
-        kernel-module-snd-pcm kernel-module-snd \
-	kernel-module-tun \
-	kernel-module-fb \
-	v4l-dvb-module-dvb-core \
-	kernel-module-usbhid \
-	kernel-module-mousedev \
-        "
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
-        kernel-module-cifs \
-        kernel-module-exportfs \
-        kernel-module-ext2 \
-        kernel-module-reiserfs \
-        kernel-module-xfs \
-	"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37 = "kernel vuplus-dvb-modules"
-
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37 = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
 	kernel-module-ext2 \
 	"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37}', d)}
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37}', d)}
-
 require conf/machine/include/vuplus-modules2.inc
 
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.37', '${KERNEL_WIFI_MODULES}', '', d)}
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.37', '${KERNEL_DVB_MODULES}', '', d)}
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.37', '${KERNEL_3G_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.3.6', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.3.6', '${KERNEL_DVB_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.3.6', '${KERNEL_3G_MODULES}', '', d)}
 
-PREFERRED_VERSION_wpa-supplicant = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '0.5.10', '0.7.3', d)}
+PREFERRED_VERSION_wpa-supplicant = "0.7.3"
 
-IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
+IMAGE_FSTYPES = "tar.bz2 ubi"
 
 TARGET_FPU = "hard"
 
@@ -74,37 +47,6 @@ MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "enable-rc-kbd"
 MACHINE_FEATURES += "display-text-vfd"
-
-
-
-EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
-IMAGE_CMD_jffs2 = " \
-	cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-        cp ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin; \
-        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
-	rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
-        rm -f ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin; \
-        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
-	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
-	--disable-compressor=lzo --compression-mode=size \
-       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-       ${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
-       rm -rf ${IMAGE_ROOTFS}/tmp/*; \
-       mkfs.jffs2 --root=${IMAGE_ROOTFS} \
-	--disable-compressor=lzo --compression-mode=size \
-       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
-       ${EXTRA_IMAGECMD}; \
-	mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo2/root_cfe_auto.jffs2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo2/kernel_cfe_auto.bin; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo2/boot_cfe_auto.jffs2; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/initrd_cfe_auto.bin; \
-	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/splash_cfe_auto.bin; \
-	cd ${DEPLOY_DIR_IMAGE}; \
-	zip ${IMAGE_NAME}_usb.zip vuplus/solo2/*; \
-	rm -rf vuplus; \       
-"
-
 
 
 UBI_VOLNAME = "rootfs"
@@ -133,31 +75,6 @@ IMAGE_CMD_ubi_append = "; \
 	zip ${IMAGE_NAME}_usb.zip vuplus/solo2/*; \
 	rm -rf vuplus; \ 
         "
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
