update driver, initrd kernel fix kernel partition

--- a/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
+++ b/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
@@ -642,7 +642,8 @@ CONFIG_MAC80211_LEDS=y
 # Generic Driver Options
 #
 CONFIG_UEVENT_HELPER_PATH=""
-# CONFIG_DEVTMPFS is not set
+CONFIG_DEVTMPFS=y
+CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
@@ -1551,7 +1552,7 @@ CONFIG_TTPCI_EEPROM=m
 # Supported USB Adapters
 #
 CONFIG_DVB_USB=m
-# CONFIG_DVB_USB_DEBUG is not set
+CONFIG_DVB_USB_DEBUG=y
 CONFIG_DVB_USB_A800=m
 CONFIG_DVB_USB_DIBUSB_MB=m
 CONFIG_DVB_USB_DIBUSB_MB_FAULTY=y
