Change kernel config Update driver  - Support 1080p50, 1080p

--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -133,6 +133,7 @@ IMAGE_CMD_ubi_append = "; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/duo2/root_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/duo2/kernel_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/duo2/initrd_cfe_auto.bin; \
+	touch ${DEPLOY_DIR_IMAGE}/vuplus/solo2/reboot.update; \
         cd ${DEPLOY_DIR_IMAGE}; \
 	zip ${IMAGE_NAME}_usb.zip vuplus/duo2/*; \
 	rm -rf vuplus; \ 
