--- a/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
+++ b/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
@@ -98,7 +98,7 @@ CONFIG_BCMGENET_NAPI=y
 # CONFIG_BCMGENET_TX_CSUM is not set
 # CONFIG_BCMGENET_DUMP_DATA is not set
 # CONFIG_BCMGENET_DUMP_TRACE is not set
-CONFIG_BRCM_MOCA=y
+# CONFIG_BRCM_MOCA is not set
 CONFIG_BRCM_USB=y
 # CONFIG_BRCM_OVERRIDE_USB is not set
 # CONFIG_BRCM_SDIO is not set
@@ -242,7 +242,7 @@ CONFIG_SMP=y
 CONFIG_SYS_SUPPORTS_SMP=y
 CONFIG_NR_CPUS=2
 CONFIG_TICK_ONESHOT=y
-CONFIG_NO_HZ=y
+# CONFIG_NO_HZ is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 # CONFIG_HZ_48 is not set
@@ -301,7 +301,6 @@ CONFIG_TREE_RCU=y
 # CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
-# CONFIG_RCU_FAST_NO_HZ is not set
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=14
@@ -2328,7 +2327,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
