--- a/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
+++ b/recipes/linux/linux-vusolo2-3.3.6/vusolo2_defconfig
@@ -2474,7 +2474,7 @@ CONFIG_CRYPTO_SHA1=m
 #
 # Ciphers
 #
-CONFIG_CRYPTO_AES=m
+CONFIG_CRYPTO_AES=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
