Update lcd4linux  - support weather display.  - separate lcd4linux and lcd4linuxsupport.  - update python-pyusb.  - png-util, fix & cleanup.  - lcd4linux : update ref.  - jpeg : update to 8b.

--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -121,6 +121,7 @@ PREFERRED_VERSION_autoconf-native = "2.61"
 #oe compliant
 PREFERRED_PROVIDER_virtual/libqte2 = "qte"
 
+PREFERRED_PROVIDER_virtual/libusb0 ?= "libusb-compat"
 
 # glibc:
 #PREFERRED_PROVIDER_virtual/libiconv ?= "glibc"
