changed rt3070 driver in solo2. (kernel -> legacy)

--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -15,6 +15,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
 	kernel-module-ext2 \
 	"
 
+MACHINE_FEATURES += "rt3070-legacy"
 require conf/machine/include/vuplus-modules2.inc
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.3.8', '${KERNEL_WIFI_MODULES}', '', d)}
