support rt5370 AP mode.     - patch ralink kernel-module.     - install ralink legacy/kernel module.     - increase dvbapp PR.     - rt3070 : fix iface name ra -> wlan.

--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -15,7 +15,8 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
 	kernel-module-ext2 \
 	"
 
-MACHINE_FEATURES += "rt3070-legacy"
+MACHINE_FEATURES += "ralink-legacy"
+MACHINE_FEATURES += "ralink-kmod"
 require conf/machine/include/vuplus-modules2.inc
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuduo2', '3.3.8', '${KERNEL_WIFI_MODULES}', '', d)}
